--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         content: "";
         position: absolute;
         bottom: 0;
-        left: 60px;
-        right: 60px;
+        left: 60px; /* Align with padding */
+        right: 60px; /* Align with padding */
         height: 2px;
         background-color: #f6f6f6;
       }
@@ -236,14 +236,14 @@
 
     <!-- Project Showcase Section -->
     <div class="container project-showcase">
-        <h2 class="project-title">Project Title Here</h2>
-        <p class="project-description">This is a detailed description of the project. Include the project goals, process, tools, design choices, challenges, and results.</p>
+        <h2 class="project-title">Low Fidelity Instagram Redesign Prototype</h2>
+        <p class="project-description">This project focuses on creating a low-fidelity prototype to redesign the Instagram layout with a goal to promote healthier screen time habits. The redesign emphasizes simplified visuals and strategic layout adjustments aimed at minimizing addictive scrolling behaviors. Through UX design principles, the prototype incorporates features such as daily screen time limits, mindful prompts, and reduced visual clutter, all aimed at encouraging users to engage more thoughtfully with the app. This project aims to balance user engagement with well-being, demonstrating how intentional UX design can positively influence user habits.</p>
 
         <!-- Project Media Section with Video and PDF -->
         <div class="project-media">
-            <!-- Video Embed with Autoplay -->
+            <!-- Video Embed with Autoplay and Loop -->
             <div class="media-item">
-                <iframe src="https://drive.google.com/file/d/1lrlsJQbd9ae5Ma9lJDotfUO-661ahnnl/preview?autoplay=1" width="100%" height="500" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/1lrlsJQbd9ae5Ma9lJDotfUO-661ahnnl/preview?autoplay=1&loop=1&muted=1" width="100%" height="500" allow="autoplay; loop"></iframe>
             </div>
             <!-- PDF Embed -->
             <div class="media-item">
