--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
     <!-- Project Showcase Section -->
     <div class="container project-showcase">
-        <h2 class="project-title">Low Fidelity Instagram Redesign Prototype</h2>
+        <h2 class="project-title">Low-Fidelity Instagram Redesign</h2>
         <p class="project-description">This project focuses on creating a low-fidelity prototype to redesign the Instagram layout with a goal to promote healthier screen time habits. The redesign emphasizes simplified visuals and strategic layout adjustments aimed at minimizing addictive scrolling behaviors. Through UX design principles, the prototype incorporates features such as daily screen time limits, mindful prompts, and reduced visual clutter, all aimed at encouraging users to engage more thoughtfully with the app. This project aims to balance user engagement with well-being, demonstrating how intentional UX design can positively influence user habits.</p>
 
         <!-- Project Media Section with Video and PDF -->
