--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Showcase - Giancarlo A. Haidar</title>
-    <!-- Link to Google Fonts for Roboto -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <!-- Link to Google Fonts for Archivo -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- Link to Google Fonts for Roboto and Archivo -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Archivo:wght@400;700&display=swap" rel="stylesheet">
     <style>
       /* Basic Reset */
       * {
@@ -106,8 +100,9 @@
         background-color: #333;
       }
 
-      .header-center a.active {
-        color: #000;
+      /* Mark-style Highlight on Hover */
+      .header-center a:hover {
+        background-color: #f6f6f6;
       }
 
       /* Exit Button Style */
