--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Showcase - Giancarlo A. Haidar</title>
-    <!-- Link to Google Fonts for Roboto and Archivo -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Archivo:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Link to Google Fonts for Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- Link to Google Fonts for Archivo -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <style>
       /* Basic Reset */
       * {
@@ -47,8 +53,10 @@
         content: "";
         position: absolute;
         bottom: 0;
-        left: 60px; /* Align with padding */
-        right: 60px; /* Align with padding */
+        left: 60px;
+        /* Align with padding */
+        right: 60px;
+        /* Align with padding */
         height: 2px;
         background-color: #f6f6f6;
       }
@@ -218,60 +226,60 @@
         margin-right: 40px;
       }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Header with Centered Navigation -->
     <header class="header">
-        <div class="header-left">
-            <h1>Giancarlo A. Haidar</h1>
-            <h2>GBDA Student</h2>
-        </div>
-        <div class="header-center">
-            <a href="#SHOW" target="_self" class="active">Show</a>
-            <a href="#TELL" target="_self">Tell</a>
-        </div>
-        <div class="header-right">
-            <a href="index.html" target="_self">X</a> <!-- Exit button as a link to the main page (index.html) -->
-        </div>
+      <div class="header-left">
+        <h1>Giancarlo A. Haidar</h1>
+        <h2>GBDA Student</h2>
+      </div>
+      <div class="header-center">
+        <a href="#SHOW" target="_self" class="active">Show</a>
+        <a href="#TELL" target="_self">Tell</a>
+      </div>
+      <div class="header-right">
+        <a href="index.html" target="_self">X</a> <!-- Exit button as a link to the main page (index.html) -->
+      </div>
     </header>
 
     <!-- Project Showcase Section -->
     <div class="container project-showcase">
-        <h2 class="project-title">Low-Fidelity Instagram Redesign</h2>
-        <p class="project-description">This project focuses on creating a low-fidelity prototype to redesign the Instagram layout with a goal to promote healthier screen time habits. The redesign emphasizes simplified visuals and strategic layout adjustments aimed at minimizing addictive scrolling behaviors. Through UX design principles, the prototype incorporates features such as daily screen time limits, mindful prompts, and reduced visual clutter, all aimed at encouraging users to engage more thoughtfully with the app. This project aims to balance user engagement with well-being, demonstrating how intentional UX design can positively influence user habits.</p>
+      <h2 class="project-title">Low-Fidelity Instagram Redesign</h2>
+      <p class="project-description">This project focuses on creating a low-fidelity prototype to redesign the Instagram layout with a goal to promote healthier screen time habits. The redesign emphasizes simplified visuals and strategic layout adjustments aimed at minimizing addictive scrolling behaviors. Through UX design principles, the prototype incorporates features such as daily screen time limits, mindful prompts, and reduced visual clutter, all aimed at encouraging users to engage more thoughtfully with the app. This project aims to balance user engagement with well-being, demonstrating how intentional UX design can positively influence user habits.</p>
 
-        <!-- Project Media Section with Video and PDF -->
-        <div class="project-media">
-            <!-- Video Embed with Autoplay and Loop -->
-            <div class="media-item">
-                <iframe src="https://drive.google.com/file/d/1lrlsJQbd9ae5Ma9lJDotfUO-661ahnnl/preview?autoplay=1&loop=1&muted=1" width="100%" height="500" allow="autoplay; loop"></iframe>
-            </div>
-            <!-- PDF Embed -->
-            <div class="media-item">
-                <iframe src="https://drive.google.com/file/d/1207OQXQRrj-N7a72hwNhiWWXItcVaeTn/preview" width="100%" height="500"></iframe>
-            </div>
+      <!-- Project Media Section with Video and PDF -->
+      <div class="project-media">
+        <!-- Video Embed with Autoplay and Loop -->
+        <div class="media-item">
+          <iframe src="https://drive.google.com/file/d/1lrlsJQbd9ae5Ma9lJDotfUO-661ahnnl/preview?autoplay=1&loop=1&muted=1" width="100%" height="500" allow="autoplay; loop"></iframe>
         </div>
+        <!-- PDF Embed -->
+        <div class="media-item">
+          <iframe src="https://drive.google.com/file/d/1207OQXQRrj-N7a72hwNhiWWXItcVaeTn/preview" width="100%" height="500"></iframe>
+        </div>
+      </div>
     </div>
 
     <!-- Footer with Link Sections and Last Updated -->
     <footer class="footer">
-        <div class="footer-section">
-            <strong>Main</strong>
-            <a href="#work">Show</a>
-            <a href="#about">Tell</a>
-        </div>
-        <div class="footer-section">
-            <strong>Contact</strong>
-            <a href="https://www.linkedin.com/in/giancarlo-haidar/" target="_blank">LinkedIn ↗</a>
-            <a href="https://drive.google.com/file/d/1MbBoBFX_vRjV7aRjpS_mjMmPi963o-9F/view?usp=sharing" target="_blank">Resume ↗</a>
-        </div>
-        <div class="contact-message">
-            Let's have a coffee chat! <br>
-            <a href="mailto:giancarlo.a.haidar@gmail.com" class="email">giancarlo.a.haidar@gmail.com</a>
-        </div>
-        <div class="last-updated">
-            LAST UPDATED 2024-11-10
-        </div>
+      <div class="footer-section">
+        <strong>Main</strong>
+        <a href="#work">Show</a>
+        <a href="#about">Tell</a>
+      </div>
+      <div class="footer-section">
+        <strong>Contact</strong>
+        <a href="https://www.linkedin.com/in/giancarlo-haidar/" target="_blank">LinkedIn ↗</a>
+        <a href="https://drive.google.com/file/d/1MbBoBFX_vRjV7aRjpS_mjMmPi963o-9F/view?usp=sharing" target="_blank">Resume ↗</a>
+      </div>
+      <div class="contact-message">
+        Let's have a coffee chat! <br>
+        <a href="mailto:giancarlo.a.haidar@gmail.com" class="email">giancarlo.a.haidar@gmail.com</a>
+      </div>
+      <div class="last-updated">
+        LAST UPDATED 2024-11-10
+      </div>
     </footer>
-</body>
+  </body>
 </html>
