--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Showcase - Giancarlo A. Haidar</title>
-    <!-- Link to Google Fonts for Roboto -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <!-- Link to Google Fonts for Archivo -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <title>Low-Fidelity Instagram Redesign - Giancarlo A. Haidar's Portfolio</title>
+    <!-- Link to Google Fonts for Roboto and Archivo -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Archivo:wght@400;700&display=swap" rel="stylesheet">
     <style>
       /* Basic Reset */
       * {
@@ -54,9 +48,7 @@
         position: absolute;
         bottom: 0;
         left: 60px;
-        /* Align with padding */
         right: 60px;
-        /* Align with padding */
         height: 2px;
         background-color: #f6f6f6;
       }
@@ -80,7 +72,6 @@
         color: #777;
       }
 
-      /* Centered Navigation Links */
       .header-center {
         position: absolute;
         left: 50%;
@@ -97,7 +88,6 @@
         position: relative;
       }
 
-      /* Overline on "Show" instead of "Tell" */
       .header-center a:first-child.active::before {
         content: '';
         position: absolute;
@@ -108,12 +98,10 @@
         background-color: #333;
       }
 
-      /* Mark-style Highlight on Hover */
       .header-center a:hover {
         background-color: #f6f6f6;
       }
 
-      /* Exit Button Style */
       .header-right a {
         color: #333;
         text-decoration: none;
@@ -125,7 +113,13 @@
       }
 
       .header-right a:hover {
-        color: #0073b1;
+        color: #005582;
+      }
+      
+      /* Link Hover Effect */
+      a:hover {
+        background-color: #f6f6f6;
+        transition: background-color 0.3s;
       }
 
       /* Project Showcase Section */
@@ -138,25 +132,47 @@
         font-weight: bold;
         color: #333;
         margin-bottom: 20px;
+        text-align: center;
+      }
+
+      .project-video {
+        position: relative;
+        padding-top: 56.25%;
+        width: 100%;
+        margin-bottom: 20px;
+      }
+
+      .project-video iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: none;
+      }
+
+      .project-media-section {
+        display: flex;
+        gap: 20px;
+        align-items: flex-start;
+        margin-top: 20px;
       }
 
       .project-description {
+        flex: 1;
         font-size: 1rem;
         color: #666;
-        margin-bottom: 20px;
-        max-width: 800px;
+        text-align: left;
       }
 
-      .project-media {
-        display: flex;
-        gap: 20px;
-        flex-wrap: wrap;
+      .project-pdf {
+        flex: 1;
       }
 
-      .media-item {
-        flex: 1 1 48%;
-        border-radius: 8px;
-        overflow: hidden;
+      .project-pdf iframe {
+        width: 100%;
+        height: 500px;
+        border: none;
       }
 
       /* Footer */
@@ -173,7 +189,6 @@
         position: relative;
       }
 
-      /* Full-width Footer Line */
       .footer::before {
         content: "";
         position: absolute;
@@ -228,7 +243,7 @@
     </style>
   </head>
   <body>
-    <!-- Header with Centered Navigation -->
+    <!-- Header -->
     <header class="header">
       <div class="header-left">
         <h1>Giancarlo A. Haidar</h1>
@@ -239,29 +254,27 @@
         <a href="#TELL" target="_self">Tell</a>
       </div>
       <div class="header-right">
-        <a href="index.html" target="_self">X</a> <!-- Exit button as a link to the main page (index.html) -->
+        <a href="index.html" target="_self">X</a>
       </div>
     </header>
 
-    <!-- Project Showcase Section -->
+    <!-- Project Showcase -->
     <div class="container project-showcase">
       <h2 class="project-title">Low-Fidelity Instagram Redesign</h2>
-      <p class="project-description">This project focuses on creating a low-fidelity prototype to redesign the Instagram layout with a goal to promote healthier screen time habits. The redesign emphasizes simplified visuals and strategic layout adjustments aimed at minimizing addictive scrolling behaviors. Through UX design principles, the prototype incorporates features such as daily screen time limits, mindful prompts, and reduced visual clutter, all aimed at encouraging users to engage more thoughtfully with the app. This project aims to balance user engagement with well-being, demonstrating how intentional UX design can positively influence user habits.</p>
-
-      <!-- Project Media Section with Video and PDF -->
-      <div class="project-media">
-        <!-- Video Embed with Autoplay and Loop -->
-        <div class="media-item">
-          <iframe src="https://drive.google.com/file/d/1lrlsJQbd9ae5Ma9lJDotfUO-661ahnnl/preview?autoplay=1&loop=1&muted=1" width="100%" height="500" allow="autoplay; loop"></iframe>
-        </div>
-        <!-- PDF Embed -->
-        <div class="media-item">
-          <iframe src="https://drive.google.com/file/d/1207OQXQRrj-N7a72hwNhiWWXItcVaeTn/preview" width="100%" height="500"></iframe>
+      <div class="project-video">
+        <iframe src="https://drive.google.com/file/d/1lrlsJQbd9ae5Ma9lJDotfUO-661ahnnl/preview?autoplay=1&loop=1&muted=1" allow="autoplay; loop"></iframe>
+      </div>
+      <div class="project-media-section">
+        <p class="project-description">
+          This project focuses on creating a low-fidelity prototype to redesign the Instagram layout with a goal to promote healthier screen time habits. The redesign emphasizes simplified visuals and strategic layout adjustments aimed at minimizing addictive scrolling behaviors. Through UX design principles, the prototype incorporates features such as daily screen time limits, mindful prompts, and reduced visual clutter, all aimed at encouraging users to engage more thoughtfully with the app. This project aims to balance user engagement with well-being, demonstrating how intentional UX design can positively influence user habits.
+        </p>
+        <div class="project-pdf">
+          <iframe src="https://drive.google.com/file/d/1207OQXQRrj-N7a72hwNhiWWXItcVaeTn/preview"></iframe>
         </div>
       </div>
     </div>
 
-    <!-- Footer with Link Sections and Last Updated -->
+    <!-- Footer -->
     <footer class="footer">
       <div class="footer-section">
         <strong>Main</strong>
