--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
     <!-- Project Showcase -->
     <div class="container project-showcase">
-      <h2 class="project-title">Low-Fidelity Instagram Redesign</h2>
+      <h2 class="project-title">Insta Core Mode</h2>
       <div class="project-video">
         <iframe src="https://drive.google.com/file/d/1lrlsJQbd9ae5Ma9lJDotfUO-661ahnnl/preview?autoplay=1&loop=1&muted=1" allow="autoplay; loop"></iframe>
       </div>
