--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
         font-family: 'Roboto', sans-serif;
       }
 
-      /* Header Bottom Border Line within Padding */
       .header::after {
         content: "";
         position: absolute;
@@ -125,14 +124,6 @@
       /* Project Showcase Section */
       .project-showcase {
         padding: 40px 60px;
-      }
-
-      .project-title {
-        font-size: 2rem;
-        font-weight: bold;
-        color: #333;
-        margin-bottom: 20px;
-        text-align: center;
       }
 
       .project-video {
@@ -255,8 +246,8 @@
     <!-- Header -->
     <header class="header">
       <div class="header-left">
-        <h1>Giancarlo A. Haidar</h1>
-        <h2>GBDA Student</h2>
+        <h1>Insta Core Mode</h1>
+        <h2>Giancarlo A. Haidar</h2>
       </div>
       <div class="header-center">
         <a href="#SHOW" target="_self" class="active">Show</a>
@@ -269,7 +260,6 @@
 
     <!-- Project Showcase -->
     <div class="container project-showcase">
-      <h2 class="project-title">Insta Core Mode</h2>
       <div class="project-video">
         <iframe src="https://drive.google.com/file/d/1lrlsJQbd9ae5Ma9lJDotfUO-661ahnnl/preview?autoplay=1&loop=1&muted=1" allow="autoplay; loop"></iframe>
       </div>
