--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@
         width: 100%;
         height: 500px;
         border: none;
+        border-left: 1px solid rgb(246, 246, 246);
+        border-right: 1px solid rgb(246, 246, 246);
       }
 
       /* Footer */
