--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="project-description">
           <ul>
             <li>
-              This Compass of Life project centred on creating a logo design that uniquely reflects the client's life journey and values. A brief self-report provided key insights into the client's life events, individual wants, and needs. The final logo, a personalized and symbolic representation of these themes, delivers a unique design that captures the story of the client's brief.
+              The InstaCore Mode project focuses on creating a high-fidelity prototype to redesign Instagram's layout to promote healthier screen time habits. The redesign highlights simplified visuals and strategic layout adjustments to minimize addictive scrolling behaviours. The prototype incorporates features such as scroll limits, mindful prompts, and reduced visual clutter through UX design principles to encourage users to engage more balancedly with Instagram.
             </li>
           </ul>
         </div>
