--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="project-description">
           <ul>
             <li>
-              The InstaCore Mode project focuses on creating a high-fidelity prototype to redesign Instagram's layout to promote healthier screen time habits. The redesign highlights simplified visuals and strategic layout adjustments to minimize addictive scrolling behaviours. The prototype incorporates features such as scroll limits, mindful prompts, and reduced visual clutter through UX design principles to encourage users to engage more balancedly with Instagram.
+              The InstaCore Mode project focuses on creating a high-fidelity prototype to redesign Instagram's layout to promote healthier screen time habits. The redesign uses a new mode to emphasize simplified visuals and strategic layout adjustments to minimize addictive scrolling behaviours. The mode incorporates features such as scroll limits, mindful prompts, and reduced visual clutter through UX design principles to encourage users to engage more balancedly with the Instagram app.
             </li>
           </ul>
         </div>
@@ -55,7 +55,7 @@
               </div>
               <div class="details-item">
                 <span class="details-label">Collaborators</span>
-                <span class="details-value">None</span>
+                <span class="details-value">Frank Le<br>Josh Metivier<br>Moosa Malik<br>Jayden Ribeiro</span>
               </div>
               <div class="details-item">
                 <span class="details-label">Tools</span>
