--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Showcase -->
     <div class="container project-showcase">
       <div class="project-image-placeholder">
-        <img src="InstaCore Mode Before and After.jpg" alt="InstaCore Mode Before and After">
+        <img src="InstaCore Mode Redesigned Before and After Home Page.jpg" alt="InstaCore Mode Redesigned Before and After Home Page">
       </div>
       <div class="project-layout">
         <div class="project-description">
@@ -68,8 +68,18 @@
             </div>
           </div>
           <div class="project-pdf-placeholder">
-            <img src="Compass of Life Black and White.jpg" alt="Compass of Life Black and White">
-            <figcaption>Black and White</figcaption>
+            <img src="InstaCore Mode Redesigned Explore Page.jpg" alt="InstaCore Mode Redesigned Explore Page">
+            <figcaption>Redesigned Explore Page</figcaption>
+            <img src="InstaCore Mode Redesigned Explore-Post Page.jpg" alt="InstaCore Mode Redesigned Explore-Post Page">
+            <figcaption>edesigned Explore-Post Page</figcaption>
+            <img src="InstaCore Mode Redesigned Explore-Reel Page.jpg" alt="InstaCore Mode Redesigned Explore-Reel Page">
+            <figcaption>Redesigned Explore-Reel Page</figcaption>
+            <img src="InstaCore Mode Redesigned Explore-Refreshed Page.jpg" alt="InstaCore Mode Redesigned Explore-Refreshed Page">
+            <figcaption>Redesigned Explore-Refreshed Page</figcaption>
+            <img src="InstaCore Mode Redesigned Profile Page.jpg" alt="InstaCore Mode Redesigned Profile Page">
+            <figcaption>Redesigned Profile Page</figcaption>
+            <img src="InstaCore Mode Redesigned Refresh Page.jpg" alt="InstaCore Mode Redesigned Refresh Page">
+            <figcaption>Redesigned Refresh Page</figcaption>
           </div>
         </div>
       </div>
